# pydantic-rag-ollama

./: .env.example  .gitignore  README.md  connection_test.py  main-run.py  main.py  pyproject.tml  pyproject.toml  requirements.txt  setup.sh
config/: settings.py
database/: __init__.py  postgres.py
embedding/: __init__.py  service.py
providers/: __init__.py  base.py  ollama.py  openai.py  openrouter.py
rag/: __init__.py  retrieval.py
utils/: __init__.py  compat.py  helpers.py
