[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-rag-ollama"
version = "0.1.0"
description = "A scalable RAG system supporting multiple LLM providers (Ollama, OpenAI, OpenRouter)"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "asyncpg>=0.27.0",
    "httpx>=0.24.1",
    "logfire>=0.8.0",
    "ollama>=0.1.5",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.39,<0.1.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["config", "providers", "database", "embedding", "rag", "utils"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
